feat: Complete backend validation and frontend TDD code generation
- Add validation annotations to all backend DTOs
- Implement comprehensive unit tests for backend services
- Generate frontend components with TDD approach
- Add build and test instructions for all units
- Update AIDLC state and audit logs