@@ -4,7 +4,7 @@ import com.tableorder.dto.request.*;
 import com.tableorder.dto.response.*;
 import com.tableorder.entity.*;
 import com.tableorder.repository.*;
-import jakarta.persistence.EntityNotFoundException;
+import javax.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -17,29 +17,29 @@ public class MenuService {
     private final StoreRepository storeRepository;
 
     public List<MenuResponse> getMenusByStore(Long storeId) {
-        return menuRepository.findByStoreIdOrderByCategorySortOrderAscSortOrderAsc(storeId).stream().map(this::toResponse).toList();
+        return menuRepository.findByStoreIdOrderByCategorySortOrderAscSortOrderAsc(storeId).stream().map(this::toResponse).collect(java.util.stream.Collectors.toList());
     }
 
     public List<MenuResponse> getMenusByCategory(Long storeId, Long categoryId) {
-        return menuRepository.findByStoreIdAndCategoryIdOrderBySortOrder(storeId, categoryId).stream().map(this::toResponse).toList();
+        return menuRepository.findByStoreIdAndCategoryIdOrderBySortOrder(storeId, categoryId).stream().map(this::toResponse).collect(java.util.stream.Collectors.toList());
     }
 
     public List<CategoryResponse> getCategories(Long storeId) {
         return categoryRepository.findByStoreIdOrderBySortOrder(storeId).stream()
-                .map(c -> new CategoryResponse(c.getId(), c.getName(), c.getSortOrder())).toList();
+                .map(c -> new CategoryResponse(c.getId(), c.getName(), c.getSortOrder())).collect(java.util.stream.Collectors.toList());
     }
 
     @Transactional
     public MenuResponse createMenu(Long storeId, MenuCreateRequest req) {
         Store store = storeRepository.findById(storeId).orElseThrow(() -> new EntityNotFoundException("Store not found"));
-        Category category = categoryRepository.findById(req.categoryId()).orElseThrow(() -> new EntityNotFoundException("Category not found"));
-        int nextSort = menuRepository.findMaxSortOrderByStoreIdAndCategoryId(storeId, req.categoryId()) + 1;
+        Category category = categoryRepository.findById(req.getCategoryId()).orElseThrow(() -> new EntityNotFoundException("Category not found"));
+        int nextSort = menuRepository.findMaxSortOrderByStoreIdAndCategoryId(storeId, req.getCategoryId()) + 1;
         Menu menu = new Menu();
         menu.setStore(store);
         menu.setCategory(category);
-        menu.setName(req.name());
-        menu.setPrice(req.price());
-        menu.setDescription(req.description());
+        menu.setName(req.getName());
+        menu.setPrice(req.getPrice());
+        menu.setDescription(req.getDescription());
         menu.setSortOrder(nextSort);
         return toResponse(menuRepository.save(menu));
     }
@@ -47,10 +47,10 @@ public class MenuService {
     @Transactional
     public MenuResponse updateMenu(Long menuId, MenuUpdateRequest req) {
         Menu menu = menuRepository.findById(menuId).orElseThrow(() -> new EntityNotFoundException("Menu not found"));
-        if (req.name() != null) menu.setName(req.name());
-        if (req.price() != null) menu.setPrice(req.price());
-        if (req.description() != null) menu.setDescription(req.description());
-        if (req.categoryId() != null) menu.setCategory(categoryRepository.findById(req.categoryId()).orElseThrow(() -> new EntityNotFoundException("Category not found")));
+        if (req.getName() != null) menu.setName(req.getName());
+        if (req.getPrice() != null) menu.setPrice(req.getPrice());
+        if (req.getDescription() != null) menu.setDescription(req.getDescription());
+        if (req.getCategoryId() != null) menu.setCategory(categoryRepository.findById(req.getCategoryId()).orElseThrow(() -> new EntityNotFoundException("Category not found")));
         return toResponse(menuRepository.save(menu));
     }
 
@@ -61,9 +61,9 @@ public class MenuService {
 
     @Transactional
     public void updateMenuOrder(Long storeId, MenuOrderRequest req) {
-        for (var item : req.items()) {
-            Menu menu = menuRepository.findById(item.menuId()).orElseThrow(() -> new EntityNotFoundException("Menu not found"));
-            menu.setSortOrder(item.sortOrder());
+        for (var item : req.getItems()) {
+            Menu menu = menuRepository.findById(item.getMenuId()).orElseThrow(() -> new EntityNotFoundException("Menu not found"));
+            menu.setSortOrder(item.getSortOrder());
             menuRepository.save(menu);
         }
     }
